# beetlejuice_marquee

./: Cargo.toml  README.md
src/: animation.rs  animations.rs  effects.rs  main.rs  tick.rs
src/animations/: glitch.rs
src/effects/: arrow.rs  color_set.rs  running_lights.rs
